[package]
name = "tcpdelay"
description = "A TCP proxy that simulates latency and jitter."
license = "MIT OR Apache-2.0"
repository = "https://github.com/finnbear/tcpdelay/"
version = "0.1.0"
authors = ["Finn Bear"]
edition = "2021"

[dependencies]
rand = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["full", "macros", "rt", "net", "time"] }
tokio-util = { version = "0.7", features = ["time"] }
